<?xml version="1.0" encoding="utf-8"?>
<shortcuts  xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutDisabledMessage="@string/static_shortcut_disable_msg"
        android:shortcutId="static"
        android:shortcutLongLabel="@string/static_shortcut_long_lable1"
        android:shortcutShortLabel="@string/static_shortcut_short_lable1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.yinhaojun.shortcuts.StaticShortcutsActivity"
            android:targetPackage="com.yinhaojun.shortcuts" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutDisabledMessage="@string/static_shortcut_disable_msg"
        android:shortcutId="static_2"
        android:shortcutLongLabel="@string/static_shortcut_long_lable2"
        android:shortcutShortLabel="@string/static_shortcut_short_lable2">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.yinhaojun.shortcuts.MainActivity"
            android:targetPackage="com.yinhaojun.shortcuts" />
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.yinhaojun.shortcuts.StaticShortcutsActivity"
            android:targetPackage="com.yinhaojun.shortcuts" />
    </shortcut>
</shortcuts>